# bejo-ai-backend

./: .env.example  .gitignore  NEXT_FEATURES.md  README.md  pyproject.toml  run_api.sh  test_api.sh
app/: agent.py  api.py  main.py  main_api.py
app/config/: db.py  llm.py  memory.py
app/graph/: builder.py
app/prompts/: query_prompt.py  relevance_prompt.py
app/state/: types.py
app/tools/: answer_generator.py  interactive_handler.py  query_executor.py  query_writer.py  relevance_checker.py  retrieved_tool.py
app/utils/: memory.py  retrieved.py
tests/: test_api.py
