[project]
name = "mysql-mcp-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.3",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-google-community[drive]>=2.0.7",
    "langchain-google-genai>=2.1.4",
    "langchain-googledrive>=0.3.35",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-ollama>=0.3.2",
    "langchain-qdrant>=0.2.0",
    "langdetect>=1.0.9",
    "langgraph>=0.4.3",
    "mem0ai>=0.1.98",
    "mysql-mcp-server>=0.2.2",
    "oauth2client>=4.1.3",
    "pdf2image>=1.17.0",
    "pymysql>=1.1.1",
    "pypandoc-binary>=1.15",
    "pypdf2>=3.0.1",
    "pyppeteer>=2.0.0",
    "pytesseract>=0.3.13",
    "rich>=14.0.0",
    "tabulate>=0.9.0",
    "unstructured>=0.17.2",
]
